# Persona-Prompt-Manager

./: .gitignore  .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  prettier.config.js  svelte.config.js  vite.config.ts
.github/workflows/: publish-to-auto-release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  config.rs  export.rs  mod.rs  persona.rs  prompt.rs  settings.rs  token.rs  tokenizer.rs
src-tauri/src/domain/: ai.rs  constants.rs  export.rs  mod.rs  persona.rs  prompt.rs  settings.rs  token.rs
src-tauri/src/error/: app_error.rs  mod.rs
src-tauri/src/infrastructure/: ai.rs  mod.rs  tokenizer.rs
src-tauri/src/infrastructure/database/: connection.rs  migrations.rs  mod.rs
src-tauri/src/infrastructure/database/repositories/: mod.rs  persona.rs  token.rs
src-tauri/src/infrastructure/keyring/: mod.rs  secrets.rs
src/lib/components/persona/: AiPersonaForm.svelte  PersonaCard.svelte  PersonaFilterBar.svelte  PersonaForm.svelte  PersonaList.svelte  PhysicalCriteriaForm.svelte  index.ts
src/lib/components/token/: TokenCard.svelte  TokenEditModal.svelte  TokenInput.svelte  TokenLegend.svelte  TokenManager.svelte  TokenSection.svelte  index.ts
src/lib/components/ui/: ApiKeyModal.svelte  Badge.svelte  Button.svelte  Card.svelte  ConfirmDialog.svelte  DonationPopup.svelte  Modal.svelte  MultiSelect.svelte  Spinner.svelte  Tag.svelte  Toast.svelte  TokenCountBadge.svelte  index.ts
src/lib/services/: ai.ts  config.ts  export.ts  index.ts  persona.ts  prompt.ts  settings.ts  tauri.ts  token.ts  tokenizer.ts
src/lib/stores/: config.svelte.ts  donation.svelte.ts  index.ts  persona.svelte.ts  toast.svelte.ts  token.svelte.ts  uiPreferences.svelte.ts
src/lib/types/: ai.ts  common.ts  export.ts  index.ts  persona.ts  prompt.ts  token.ts  tokenizer.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/about/: +page.svelte
src/routes/compose/: +page.svelte
src/routes/personas/: +page.svelte
src/routes/personas/[id]/: +page.svelte  +page.ts
src/routes/personas/new/: +page.svelte
src/routes/settings/: +page.svelte
