[package]
name = "persona-prompt-manager"
version = "0.1.3"
description = "A cross-platform desktop application built in Rust that enables digital artists and AI image generation practitioners to create, manage, and compose prompts for fictional character generation with consistency and precision."
authors = ["Jonathan About"]
license = "MIT"
repository = "https://github.com/j-about/Persona-Prompt-Manager"
homepage = "https://github.com/j-about/Persona-Prompt-Manager"
readme = "../README.md"
edition = "2021"

[lib]
name = "persona_prompt_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# AI Integration
genai = "0.5"

# Tokenization for CLIP token counting
tokenizers = { version = "0.21", features = ["http"] }

# Error handling
thiserror = "2"
anyhow = "1"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Secure credential storage (persistent across reboots)
keyring = { version = "3.6", features = [
    "apple-native",
    "windows-native",
    "linux-native-async-persistent",
    "tokio",
    "crypto-rust",
    "vendored"
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too noisy for this codebase
needless_pass_by_value = "allow"      # Often intentional for API design (Tauri commands)
missing_errors_doc = "allow"          # Would require extensive doc additions
option_if_let_else = "allow"          # if-let is often more readable than map_or
significant_drop_tightening = "allow" # False positives with async code
too_many_lines = "allow"              # Some functions are large by necessity
# Allow micro-optimization suggestions that don't affect correctness
assigning_clones = "allow"            # clone_from vs = y.clone() is micro-optimization
match_same_arms = "allow"             # Combined arms reduce readability in some cases
format_push_string = "allow"          # push_str(&format!()) is clearer than write!
trivially_copy_pass_by_ref = "allow"  # Consistency over micro-optimization
cast_precision_loss = "allow"         # Intentional in percentage calculations
cast_possible_wrap = "allow"          # Handled by domain constraints
cast_possible_truncation = "allow"    # Handled by domain constraints
too_long_first_doc_paragraph = "allow" # Documentation clarity over length
